# expmgr

./: .gitignore  Cargo.toml  fmt.sh  lint.sh  meson.build  pyproject.toml  shell.nix
data/: com.example.expmgr.desktop.in.in  meson.build
data/icons/: meson.build
data/resources/: expmgr.gresource.xml  meson.build
data/resources/ui/: expire_group.blp  list_row.blp  list_view.blp  main_win.blp  shortcuts_win.blp
expmgr/: expire_group.py  list_row.py  list_view.py  main.py  main_win.py  shortcuts_win.py
po/: POTFILES  expmgr.pot  ja.po
src/: app.css  app.rs  list.rs  main.rs
